--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,11 +61,11 @@ jobs:
         cd front
         docker build -t bobapp-front .
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push bobapp-front
+        docker push ${{ secrets.DOCKER_USERNAME }}/bobapp-front:latest
 
     - name: Build and push back-end Docker image
       run: |
         cd back
         docker build -t bobapp-back .
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push bobapp-back
+        docker push ${{ secrets.DOCKER_USERNAME }}/bobapp-back:latest
