--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
         cd front
         docker build -t bobapp-front .
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker tag bobapp-front:latest ${{ secrets.DOCKER_USERNAME }}/bobapp-front:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/bobapp-front:latest
 
     - name: Build and push back-end Docker image
@@ -68,4 +69,5 @@ jobs:
         cd back
         docker build -t bobapp-back .
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker tag bobapp-back:latest ${{ secrets.DOCKER_USERNAME }}/bobapp-back:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/bobapp-back:latest
