--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,15 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    environment: Test
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 'lts/Hydrogen'
 
     - name: Install dependencies and run front-end tests
       run: |
@@ -28,16 +27,16 @@ jobs:
         NG_CLI_ANALYTICS=false npm test
 
     - name: Archive code coverage reports
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: code-coverage
         path: front/coverage
 
     - name: Set up Maven
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
         distribution: 'adopt'
-        java-version: '18'
+        java-version: '21'
 
     - name: Install dependencies and run back-end tests
       run: |
