--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
         npm install puppeteer --save-dev
         NG_CLI_ANALYTICS=false npm test
 
-    - name: Archive code coverage reports
+    - name: Archive front code coverage reports
       uses: actions/upload-artifact@v4
       with:
-        name: code-coverage
+        name: frontend-code-coverage
         path: front/coverage
 
     - name: Set up Maven
@@ -42,6 +42,12 @@ jobs:
       run: |
         cd back
         mvn clean install
+
+    - name: Archive back code coverage reports
+      uses: actions/upload-artifact@v2
+      with:
+        name: backend-code-coverage
+        path: back/target/site/jacoco
 
   build-and-deploy:
     runs-on: ubuntu-latest
