--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,14 @@ jobs:
         name: backend-code-coverage
         path: back/target/site/jacoco
 
+    - name: Scan code using SonarCloud
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        projectBaseDir: .
+
   build-and-deploy:
     runs-on: ubuntu-latest
 
